one-click-deployment/sqlserver-to-postgres/mma-nested-stacks/mma-nested-stacks/network-stack.yaml
Description: Network infrastructure for MMA applications

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Existing VPC ID
  
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Public subnet ID
  
  StackPrefix:
    Type: String
    Description: Unique prefix for resources

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: F1000
            reason: "All outbound traffic should be allowed from this instance."
    Properties:
      GroupDescription: Security group for MMA applications EC2 instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - Description: Allow HTTPS from anywhere - modify source IP to your IP address
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 127.0.0.1/32
        - Description: Allow HTTP from anywhere - modify source IP to your IP address
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 127.0.0.1/32
        - Description: Allow MMA Test Manager - modify source IP to your IP address
          IpProtocol: tcp
          FromPort: 8082
          ToPort: 8082
          CidrIp: 127.0.0.1/32
        - Description: Allow Code Server - modify source IP to your IP address
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 127.0.0.1/32          
      Tags:
        - Key: Name
          Value: !Sub '${StackPrefix}-mma-apps-sg'

Outputs:
  SecurityGroupId:
    Description: Security group ID
    Value: !Ref SecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupId'
